# Linear-Structures-Programming

Examen/DandD/: Ataque.h  CMakeLists.txt  Enemigo.h  Juego.h  Jugador.h  List.h  Objeto.h  Personaje.h  main.cpp
Examen/EstructurasExamen/: CMakeLists.txt  LinkedList.h  List.h
Examen/ExamenFinalDnD/: CMakeLists.txt  Dynarray.h  Habilidad.h  Item.h  Jugador.h  main.cpp
Test1/: CMakeLists.txt
Unidad1/A. Individual/BankAccount/: BankAccount.cpp  BankAccount.h  CMakeLists.txt
Unidad1/A. Individual/FiguraGeometrica/: main.cpp
Unidad1/AC1/: CMakeLists.txt  Libro.cpp  Libro.h  Lista.h  Usuario.cpp  Usuario.h  UsuarioBibliotecario.cpp  UsuarioBibliotecario.h  UsuarioCliente.cpp  UsuarioCliente.h  main.cpp
Unidad1/AC1_COMENTADO_NUEVO_MAIN/: CMakeLists.txt  Libro.cpp  Libro.h  Lista.cpp  Lista.h  Usuario.cpp  UsuarioBibliotecario.cpp  UsuarioBibliotecario.h  UsuarioCliente.cpp  UsuarioCliente.h  main.cpp
Unidad2/Grupo1_AC2/: CMakeLists.txt  main.cpp
Unidad2/Grupo1_AC2/data/Ficheros/: Fichero.txt  NotasIngles.txt  notas.txt
Unidad2/Grupo1_AC2/include/: Aula.h  CalculadoraAvanzada.h  Estudiante.h  GestorArchivos.h  JuegoAdivinar.h  Matriz.h  MochilaVirtual.h  Profesor.h  UsuarioAdministrador.h
Unidad2/Grupo1_AC2/src/: Aula.cpp  Estudiante.cpp  GestorArchivos.cpp  JuegoAdivinar.cpp  MochilaVirtual.cpp  Profesor.cpp  UsuarioAdministrador.cpp
Unidad2/VelasquezMariucci_Esteban_CodigoUF2/8_FractionFunctions/: CMakeLists.txt  main.cpp
Unidad2/VelasquezMariucci_Esteban_CodigoUF2/8_FractionFunctions/include/: Fraction.h  FractionUtils.h
Unidad2/VelasquezMariucci_Esteban_CodigoUF2/8_FractionFunctions/src/: Fraction.cpp  FractionUtils.cpp
Unidad3/Actividad-Colaborativa-3-Proyectos-para-el-uso-de-Vectores/: .gitignore  CMakeLists.txt
Unidad3/Actividad-Colaborativa-3-Proyectos-para-el-uso-de-Vectores/include/: Album.h  ArtistaOGrupo.h  Cancion.h  DinarrayPEL.h  Pelicula.h  VectorPEL.h
Unidad3/Actividad-Colaborativa-3-Proyectos-para-el-uso-de-Vectores/src/: Album.cpp  ArtistaOGrupo.h.cpp  Cancion.cpp  Pelicula.cpp  main.cpp
Unidad3/LondDinArray/: CMakeLists.txt  Dinarrays.h  LongDynArray.h  main.cpp
Unidad4/Actividad-Colaborativa-4-Actividades-con-listas-enlazadas/: .gitignore  CMakeLists.txt
Unidad5/Grupo1_AC5/: Analista.cpp  Analista.h  CMakeLists.txt  ControlSeguridad.cpp  ControlSeguridad.h  ListaEnlazada.h  ListaRegistro.h  Registro.cpp  Registro.h  Usuario.cpp  Usuario.h  main.cpp
Unidad5/pii24-ecometrics/: pom.xml  users.json
(+150 files in other folders)
